ui.frontend/src/main/webpack/etisalat/styles/blogspot.scss
.blog-post-wrapper {
  .tile-box-blogtile {
	overflow: hidden;
    background: $white;
    border-radius: 4px;
    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.1);
    position: relative;
    width: 100%;
    @media (min-width: 992px) {
      min-height: toRem(341);
      max-height: toRem(341);
      margin-bottom: 2rem;
      .tile-box-blogbody {
        max-height: toRem(171);
      }
    }
    @media (max-width: 992px) {
      margin-bottom: 1.5rem;      
    }

    .img-cover {
      height: toRem(168);
      position: relative;
      overflow: hidden;
      border-radius: 4px 4px 0 0;

      .category p {
        color: $white;
        font-size: $font10;
        letter-spacing: toRem(1);
        text-align: center;
        margin: 0;
        position: absolute;
        top: 0;
        left: 1.5rem;
        background: $main-green;
        padding: toRem(5) toRem(10);
        text-transform: uppercase;
        border-radius: 0 0 toRem(4) toRem(4);
        line-height: 1rem;
        @include font-family-lato;
      }
      img{
        position: absolute;
        height: 100%;
      }
    }
  }

  .tile-box-blogbody {
    padding: 1rem;
    padding-top: toRem(12);
    @include respond-to-min($desktop) { 
      max-height: 175px;
    }
    .box-details {
      @include respond-to-min($desktop) { 
        max-height: 70px;
        overflow: hidden;
      }
      p {
        margin: 0;
        margin-bottom: toRem(8);
        color: $steel-grey;
        font-size: $font12;
        line-height: toRem(16);
        @include font-family-lato;
        
        @include respond-to-min($desktop) { 
          max-height: 105px;
          overflow: hidden;
        }
      }
    }

    .seven-minutes-read p {
      margin: 0;
      margin-bottom: toRem(8);
      color: $steel-grey;
      font-size: $font11;
      line-height: toRem(16);
    }

    .date {
      @include respond-to-min($desktop) { 
        position: absolute;
        bottom: 0.5rem;
      }
      p {
        color: $steel-grey;
        font-size: $font11;
        line-height: toRem(16);
        margin: 0;
        @include font-family-lato;
      }
    }

    .box-title h2 {
      color: $cart-count-black;
      margin: 0;
      font-size: $font20;
      line-height: toRem(28);
      margin-bottom: toRem(8);
      text-overflow: inherit;
      white-space: inherit;
      overflow: hidden;      
    }
  }


  // video variation
  &.video {
    .tile-box-blogtile {
      .img-cover {
        height: toRem(341);

        .video-icon {
          position: absolute;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
          cursor: pointer;
          display: flex;
          justify-content: center;
          align-items: center;
          z-index: 5;
        }
      }

      .tile-box-blogbody {
        position: absolute;
        bottom: 0;
        width: 100%;
        max-height: 60%;
        height: 100%;
        display: flex;
        flex-wrap: wrap;
        align-content: flex-end;
        background: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);

        .box-details p,
        .box-title h2,
        .date p,
        .seven-minutes-read p {
          color: $white !important;
          width: 100%;
        }

        .box-title {
          width: 100%;

          h2 {
            font-size: $font16;
            font-weight: 500;
            line-height: toRem(20);
          }
        }

        .date {
          width: 100%;
        }
      }
    }
  }
  .tile-box-blogtile .tile-box-blogbody {
    padding: 12px 12px 1rem 1rem;
    text-align: left;
}
}

.search-results-wrapper {
  padding-left: 1rem;
  padding-right: 1rem;

  h3 {
    padding-top: 0;
  }

  span {
    color: $cart-count-black;
    font-size: $font20;
    line-height: toRem(25);
    margin: 0;
  }

  a {
    color: $grey1;
    font-size: $font14;
    line-height: toRem(20);
    text-decoration: underline;
  }

  .no-result-found {
    color: $grey1;
    font-size: $font14;
    line-height: toRem(20);
  }
}

.search-target {
  display: flex;

  .searchTarget {
    margin-left: .5rem;
  }
}

.blogpost-wrapper .item {
  display: none;
}

.blogpost-wrapper {

  .video {
    min-height: 0;
  }

  .action {
    .btn {
      max-width: toRem(335) !important;
    }
  }
}


.subscribe-newsletter {
  position: relative;
  background: $sand-white-50;
  overflow: hidden;
  padding: 1.5rem;
  width: 100%;

  @media (min-width: 992px) {
    padding: toRem(36) 2rem;
  }

  .title h2 {
    color: $almost-black;
    font-size: $font28;
    letter-spacing: toRem(0.5);
    line-height: toRem(28);
    margin: 0;
  }

  .desc p {
    color: $gray-fill;
    font-size: $font18;
    line-height: toRem(28);
    margin: 0;
  }

  &:after {
    content: "";
    background: url(../img/bg-cards/plan-cards-illustration-green.svg) no-repeat;
    background-size: contain;
    height: toRem(280);
    position: absolute;
    width: toRem(260);
    opacity: .1;
    z-index: 0;
    right: 0;
    transform: rotate(1turn);
    top: 0;
    left: auto;
  }

  &:before {
    content: "";
    background: url(../img/bg-cards/plan-cards-illustration-green.svg) no-repeat;
    background-size: contain;
    height: toRem(280);
    position: absolute;
    width: toRem(260);
    opacity: .1;
    z-index: 0;
    right: auto;
    transform: rotate(180deg);
    top: 0;
    left: 0;
  }

  .form.wst-form .form-group {
    margin: 0;
  }

  .general-form-submit {
    .btn {
      background: transparent;
      margin-top: toRem(-8);
      z-index: 5;

      @media (max-width: 767px) {
        margin-top: 1.5rem;
      }
    }
  }
}


// article module


.back-to-insight {
  padding: toRem(40) 0;

  .btn {
    font-size: $font14;
    letter-spacing: toRem(2);
    line-height: toRem(20);
  }
}
/* ... */

